--- a/src/pages/LayoutPage/LayoutPage.css
+++ b/src/pages/LayoutPage/LayoutPage.css
@@ -1,37 +1,139 @@
-.controller {
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+@media (max-width: 600px) {
+  .container {
+    max-width: 600px;
+  }
+}
+
+.layout-heading {
+  margin: 0 0 40px 0;
+}
+
+.controller,
+.move-position {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.controller {
+  gap: 20px;
 }
 
 .move-position {
-  display: flex;
-  width: 300px;
-  height: 100px;
+  position: relative;
 }
 
-.prev {
-  width: 100px;
-  height: 100px;
-  clip-path: polygon(100% 0, 0 50%, 100% 100%);
-  background-color: gray;
-}
-
-.forward {
-  width: 100px;
-  height: 100px;
-  clip-path: polygon(100% 50%, 0 0, 0 100%);
-  background-color: gray;
-}
-
-.up {
-  width: 100px;
-  height: 100px;
-  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-  background-color: gray;
-}
-
+.prev,
+.forward,
+.up,
 .down {
   width: 100px;
   height: 100px;
-  clip-path: polygon(100% 0, 0 0, 50% 100%);
   background-color: gray;
+}
+
+.prev {
+  clip-path: polygon(100% 0, 0 50%, 100% 100%);
+}
+
+.forward {
+  clip-path: polygon(100% 50%, 0 0, 0 100%);
+}
+
+.up {
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+}
+
+.down {
+  clip-path: polygon(100% 0, 0 0, 50% 100%);
+}
+
+.items {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+  margin: 50px 0;
+  gap: 10px;
+}
+
+@media (max-width: 800px) {
+  .items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+}
+
+.square,
+.circle,
+.oval,
+.trapezoid,
+.rectangle,
+.parallelogram {
+  width: 100px;
+  height: 100px;
+  background-color: gray;
+}
+
+.square {
+  clip-path: inset(10% 10% 10% 10%);
+}
+
+.circle {
+  clip-path: circle(50% at 50% 50%);
+}
+
+.oval {
+  clip-path: ellipse(50% 35% at 50% 50%);
+}
+
+.trapezoid {
+  clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
+}
+
+.rectangle {
+  clip-path: inset(10% 0 10% 0);
+}
+
+.parallelogram {
+  clip-path: polygon(0 0, 75% 0, 100% 100%, 25% 100%);
+}
+
+.ant-card-hoverable:hover {
+  background-color: orange;
+}
+
+.move-position,
+.move-shape {
+  position: relative;
+  cursor: pointer;
+}
+
+.tag {
+  position: absolute;
+  background-color: #6eda78;
+  width: 110px;
+  height: 30px;
+  border-radius: 10px;
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.move-shape .tag {
+  bottom: -15px;
+  right: 70px;
+}
+
+.move-position .tag {
+  bottom: -15px;
+  right: 40%;
 }
